--- a/core3/vizmap-impl/trunk/it/pom.xml
+++ b/core3/vizmap-impl/trunk/it/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>vizmap-impl-parent</artifactId>
 		<groupId>org.cytoscape</groupId>
-		<version>1.0-SNAPSHOT</version>
+		<version>3.0.0-alpha1</version>
 	</parent>
 
 	<properties>
