--- a/core3/vizmap-impl/trunk/pom.xml
+++ b/core3/vizmap-impl/trunk/pom.xml
@@ -9,7 +9,7 @@
 	<groupId>org.cytoscape</groupId>
 	<artifactId>vizmap-impl-parent</artifactId>
 	<packaging>pom</packaging>
-	<version>3.0.0-alpha1</version>
+	<version>3.0.0-alpha2-SNAPSHOT</version>
 	<name>vizmap-impl-parent</name>
 
 	<modules>
@@ -18,9 +18,9 @@
 	</modules>
 
 	<scm>
-		<connection>scm:svn:http://chianti.ucsd.edu/svn/core3/vizmap-impl/tags/vizmap-impl-parent-3.0.0-alpha1</connection>
-		<developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/vizmap-impl/tags/vizmap-impl-parent-3.0.0-alpha1</developerConnection>
-		<url>http://chianti.ucsd.edu/svn/core3/vizmap-impl/tags/vizmap-impl-parent-3.0.0-alpha1</url>
+		<connection>scm:svn:http://chianti.ucsd.edu/svn/core3/vizmap-impl/trunk</connection>
+		<developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/vizmap-impl/trunk</developerConnection>
+		<url>http://chianti.ucsd.edu/svn/core3/vizmap-impl/trunk</url>
 	</scm>
 
 	<repositories>
