--- a/core3/filter-impl/trunk/pom.xml
+++ b/core3/filter-impl/trunk/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.cytoscape</groupId>
 		<artifactId>parent</artifactId>
-		<version>3.0.0-alpha3</version>
+		<version>3.0.0-alpha5</version>
 	</parent>
 	<properties>
 		<bundle.symbolicName>org.cytoscape.filter-impl</bundle.symbolicName>
@@ -18,12 +18,19 @@
 	<name>${bundle.symbolicName}
 		[${bundle.namespace}]</name>
 	<packaging>bundle</packaging>
+
+    <scm>
+        <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/filter-impl/trunk</connection>
+        <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/filter-impl/trunk</developerConnection>
+        <url>http://chianti.ucsd.edu/svn/core3/filter-impl/trunk</url>
+    </scm>
+
 	<dependencies>
 
         <dependency>
             <groupId>org.cytoscape</groupId>
             <artifactId>model-api</artifactId>
-            <version>3.0.0-alpha2-SNAPSHOT</version>
+            <version>3.0.0-alpha2</version>
         </dependency>
 
 		<dependency>
@@ -49,13 +56,13 @@
         <dependency>
         	<groupId>org.cytoscape</groupId>
         	<artifactId>session-api</artifactId>
-        	<version>3.0.0-alpha2-SNAPSHOT</version>
+        	<version>3.0.0-alpha2</version>
         	<scope>compile</scope>
         </dependency>
         <dependency>
         	<groupId>org.cytoscape</groupId>
         	<artifactId>viewmodel-api</artifactId>
-        	<version>3.0.0-alpha3-SNAPSHOT</version>
+        	<version>3.0.0-alpha3</version>
         	<scope>compile</scope>
         </dependency>
         <dependency>
@@ -66,7 +73,7 @@
         <dependency>
         	<groupId>org.cytoscape</groupId>
         	<artifactId>work-api</artifactId>
-        	<version>3.0.0-alpha2-SNAPSHOT</version>
+        	<version>3.0.0-alpha2</version>
         	<scope>compile</scope>
         </dependency>
         <dependency>
@@ -77,12 +84,12 @@
         <dependency>
         	<groupId>org.cytoscape</groupId>
         	<artifactId>swing-application-api</artifactId>
-        	<version>1.0-SNAPSHOT</version>
+        	<version>3.0.0-alpha1</version>
         </dependency>
         <dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>swing-util</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>3.0.0-alpha1</version>
 		</dependency>
 	</dependencies>
 	
