--- a/core3/work-swing-impl/trunk/pom.xml
+++ b/core3/work-swing-impl/trunk/pom.xml
@@ -9,7 +9,7 @@
 	<groupId>org.cytoscape</groupId>
 	<artifactId>work-swing-impl-parent</artifactId>
 	<packaging>pom</packaging>
-	<version>1.0-SNAPSHOT</version>
+	<version>3.0.0-alpha1</version>
 	<name>work-swing-impl-parent</name>
 
 	<modules>
@@ -18,9 +18,9 @@
 	</modules>
 
 	<scm>
-		<connection>scm:svn:http://chianti.ucsd.edu/svn/core3/work-swing-impl/trunk</connection>
-		<developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/work-swing-impl/trunk</developerConnection>
-		<url>http://chianti.ucsd.edu/svn/core3/work-swing-impl/trunk</url>
+		<connection>scm:svn:http://chianti.ucsd.edu/svn/core3/work-swing-impl/tags/work-swing-impl-parent-3.0.0-alpha1</connection>
+		<developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/work-swing-impl/tags/work-swing-impl-parent-3.0.0-alpha1</developerConnection>
+		<url>http://chianti.ucsd.edu/svn/core3/work-swing-impl/tags/work-swing-impl-parent-3.0.0-alpha1</url>
 	</scm>
 
     <build>
