--- a/core3/launch-framework/trunk/pom.xml
+++ b/core3/launch-framework/trunk/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>parent</artifactId>
     <groupId>org.cytoscape</groupId>
-    <version>3.0.0-alpha4-SNAPSHOT</version>
+    <version>3.0.0-alpha5</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
@@ -15,6 +15,29 @@
   <name>Cytoscape Launch Framework</name>
 
   <packaging>pom</packaging>
+
+    <scm>
+        <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/launch-framework/trunk</connection>
+        <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/launch-framework/trunk</developerConnection>
+        <url>http://chianti.ucsd.edu/svn/core3/launch-framework/trunk</url>
+   </scm>
+
+    <build>
+        <plugins>
+            <plugin>
+                <inherited>false</inherited>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.1</version>
+                <configuration>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
+                    <goals>deploy</goals>
+                    <!-- so that impl bundles with modules will build correctly -->
+                    <preparationGoals>clean install</preparationGoals>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
   <modules>
     <module>cmdline</module>
