--- a/cytoscape/trunk/coreplugins/BioPAX/pom.xml
+++ b/cytoscape/trunk/coreplugins/BioPAX/pom.xml
@@ -11,6 +11,32 @@
 
   <name>BioPAX</name>
 
+    <!-- bootstrap for cytoscape dependencies, namely the parent POM snapshots -->
+    <repositories>
+        <repository>
+            <id>cytoscape_snapshots</id>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <name>Cytoscape Snapshots</name>
+            <url>http://cytoscape.wodaklab.org/nexus/content/repositories/snapshots/</url>
+        </repository>
+        <repository>
+            <id>cytoscape_releases</id>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <name>Cytoscape Releases</name>
+            <url>http://cytoscape.wodaklab.org/nexus/content/repositories/releases/</url>
+        </repository>
+    </repositories>
+
   <build>
     <plugins>
 	  <plugin>
@@ -47,31 +73,6 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-
-<!-- temporary: enable when used outside the cytoscape project internals
-	<repositories>
-		<repository>
-			<id>cytoscape.snapshots</id>
-			<name>Cytoscape Snapshots Repository</name>
-			<url>http://cytoscape.wodaklab.org/nexus/content/repositories/snapshots/</url>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
-			<snapshots>
-			</snapshots>
-		</repository>
-		<repository>
-			<id>biopax.snapshots</id>
-			<name>BioPAX Snapshots Repository at Sourceforge</name>
-			<url>http://biopax.sourceforge.net/m2repo/snapshots/</url>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
-			<snapshots>
-			</snapshots>
-		</repository>
-	</repositories>
--->
 
 </project>
 
