--- a/cytoscape/trunk/webstart/pom.xml
+++ b/cytoscape/trunk/webstart/pom.xml
@@ -16,6 +16,32 @@
   <!-- This is the url used to define the codebase of the jnlp file. -->
   <url>${webstart.url}</url>
 
+    <!-- bootstrap for cytoscape dependencies, namely the parent POM snapshots -->
+    <repositories>
+        <repository>
+            <id>cytoscape_snapshots</id>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <name>Cytoscape Snapshots</name>
+            <url>http://cytoscape.wodaklab.org/nexus/content/repositories/snapshots/</url>
+        </repository>
+        <repository>
+            <id>cytoscape_releases</id>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <name>Cytoscape Releases</name>
+            <url>http://cytoscape.wodaklab.org/nexus/content/repositories/releases/</url>
+        </repository>
+    </repositories>
+
   <build>
     <plugins>
       <plugin>
