--- a/core3/launch-framework/trunk/pom.xml
+++ b/core3/launch-framework/trunk/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <parent>
     <artifactId>parent</artifactId>
@@ -10,16 +9,16 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.cytoscape</groupId>
   <artifactId>launch-framework</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>3.0.0-alpha1</version>
 
   <name>Cytoscape Launch Framework</name>
 
   <packaging>pom</packaging>
 
     <scm>
-        <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/launch-framework/trunk</connection>
-        <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/launch-framework/trunk</developerConnection>
-        <url>http://chianti.ucsd.edu/svn/core3/launch-framework/trunk</url>
+        <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/launch-framework/tags/launch-framework-3.0.0-alpha1</connection>
+        <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/launch-framework/tags/launch-framework-3.0.0-alpha1</developerConnection>
+        <url>http://chianti.ucsd.edu/svn/core3/launch-framework/tags/launch-framework-3.0.0-alpha1</url>
    </scm>
 
     <build>
