--- a/core3/launch-framework/trunk/launcher/pom.xml
+++ b/core3/launch-framework/trunk/launcher/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.cytoscape</groupId>
     <artifactId>launch-framework</artifactId>
-    <version>3.0.0-alpha1</version>
+    <version>3.0.0-alpha2-SNAPSHOT</version>
   </parent>
 
   <artifactId>launcher</artifactId>
