--- a/core3/launch-framework/trunk/pom.xml
+++ b/core3/launch-framework/trunk/pom.xml
@@ -9,16 +9,16 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.cytoscape</groupId>
   <artifactId>launch-framework</artifactId>
-  <version>3.0.0-alpha1</version>
+  <version>3.0.0-alpha2-SNAPSHOT</version>
 
   <name>Cytoscape Launch Framework</name>
 
   <packaging>pom</packaging>
 
     <scm>
-        <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/launch-framework/tags/launch-framework-3.0.0-alpha1</connection>
-        <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/launch-framework/tags/launch-framework-3.0.0-alpha1</developerConnection>
-        <url>http://chianti.ucsd.edu/svn/core3/launch-framework/tags/launch-framework-3.0.0-alpha1</url>
+        <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/launch-framework/trunk</connection>
+        <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/launch-framework/trunk</developerConnection>
+        <url>http://chianti.ucsd.edu/svn/core3/launch-framework/trunk</url>
    </scm>
 
     <build>
