--- a/core3/launch-framework/trunk/startlevel-assembly/pom.xml
+++ b/core3/launch-framework/trunk/startlevel-assembly/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.cytoscape</groupId>
     <artifactId>launch-framework</artifactId>
-    <version>3.0.0-alpha1</version>
+    <version>3.0.0-alpha2-SNAPSHOT</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
