--- a/csplugins/trunk/ucsd/mes/genomespace-plugin/pom.xml
+++ b/csplugins/trunk/ucsd/mes/genomespace-plugin/pom.xml
@@ -51,7 +51,7 @@
     <dependency>
       <groupId>cytoscape</groupId>
       <artifactId>application</artifactId>
-      <version>2.8.0-beta4-SNAPSHOT</version>
+      <version>2.8.1</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
@@ -63,18 +63,25 @@
     <dependency>
       <groupId>com.sun.jersey</groupId>
       <artifactId>jersey-json</artifactId>
-      <version>1.3</version>
+      <version>1.5-ea09</version>
     </dependency>
     <dependency>
       <groupId>cytoscape-temp</groupId>
       <artifactId>genomespace-cdk</artifactId>
-      <version>1.0-beta1</version>
+      <version>1.0-beta2</version>
     </dependency>
+    <dependency>
+      <groupId>cytoscape-temp</groupId>
+      <artifactId>dm-messages</artifactId>
+      <version>1.0-beta2</version>
+    </dependency>
+	<!--
     <dependency>
       <groupId>cytoscape-temp</groupId>
       <artifactId>gs-common-util</artifactId>
       <version>1.0-beta1</version>
     </dependency>
+	-->
   </dependencies>
 
   <repositories>
