--- a/csplugins/trunk/ucsd/pwang/cy3samples/sample03a/pom.xml
+++ b/csplugins/trunk/ucsd/pwang/cy3samples/sample03a/pom.xml
@@ -38,7 +38,7 @@
         <configuration>
           <archive>
             <manifestEntries>
-              <Cytoscape-Plugin>org.cytoscape.sample.internal.Sample03a</Cytoscape-Plugin>
+              <Cytoscape-Plugin>org.cytoscape.sample.internal.Sample03aPlugin</Cytoscape-Plugin>
             </manifestEntries>
           </archive>
         </configuration>
