--- a/core3/parent/trunk/pom.xml
+++ b/core3/parent/trunk/pom.xml
@@ -24,6 +24,7 @@
 		<maven-bundle-plugin.version>2.1.0</maven-bundle-plugin.version>
 		<maven-jar-plugin.version>2.3.1</maven-jar-plugin.version>
 		<maven-surefire-plugin.version>2.7.1</maven-surefire-plugin.version>
+		<maven-assembly-plugin.version>2.2</maven-assembly-plugin.version>
 	</properties>
 
 	<distributionManagement>
