--- a/core3/parent/trunk/pom.xml
+++ b/core3/parent/trunk/pom.xml
@@ -15,7 +15,10 @@
 		<spring.osgi.version>1.2.1</spring.osgi.version>
 		<junit.version>4.8.1</junit.version>
 		<mockito.version>1.8.1</mockito.version>
+
 		<pax.exam.version>1.2.2</pax.exam.version>
+		<maven-paxexam-plugin.version>1.2.2</maven-paxexam-plugin.version>
+
 		<maven-compiler-plugin.version>2.3.2</maven-compiler-plugin.version>
 		<maven-javadoc-plugin.version>2.7</maven-javadoc-plugin.version>
 		<maven-source-plugin.version>2.1.2</maven-source-plugin.version>
